data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2415.wast
;; 5. **Test of Returning from a Function Inside a br_table Label**:     - Create a WebAssembly module where returning from a function is part of the instructions enclosed within a specific `br_table` label target.    - *Constraint*: Verify proper management of function returns within `br_table` controlled blocks.    - *Relation to Improper Function Call or Return Handling*: Ensures that returning from functions within `br_table` labels correctly unwinds the stack and performs necessary context switches.

(assert_invalid
  (module
    (func (param i32) (result i32)
      (block (result i32)
        (br_table 0 1 (i32.const 2) 
          (call $test_func)))
      (return (i32.const 1))
    )
    (func $test_func (result i32)
      (i32.const 0))
  )
  "type mismatch"
)